fix: sidebar width is too small to fit "Spectrum CSS" in large scale

--- a/components/css/sidebar.scss
+++ b/components/css/sidebar.scss
@@ -54,7 +54,7 @@
   left:0px;
   top:0px;
   bottom:0px;
-  width:248px;
+  width:256px;
   transition: none;
 
   @media screen and (max-width: 960px) {
@@ -84,7 +84,7 @@
 
   padding: 30px 24px 24px 24px;
 
-  width: 248px;
+  width: 256px;
 
 }
 
